<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/header_bar_dropdown"
        android:title="@string/dropdown"
        android:icon="@drawable/dropdown"
        android:orderInCategory="1"
        app:iconTint="@color/white"
        app:showAsAction="always"
        />
...
